--- a/index.html
+++ b/index.html
@@ -16,10 +16,12 @@
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="font-[Outfit] text-center bg-[#d5e1ef]  flex flex-col justify-center items-center m-0 p-0 h-screen w-screen">
-
-  <main class="bg-white max-w-[355px] h-[540px] rounded-2xl shadow-xl">
+  <!-- Main Div -->
+  <main class="bg-white max-w-[355px] h-[540px] rounded-2xl shadow-lg">
+    <!-- QR Code -->
     <img class="w-[320px] ml-[18px] mt-5 rounded-xl" src="images/image-qr-code.png" alt="image-qr-code">
-    <h1 class="text-[22px] font-bold leading-[120%] mt-7 px-10">Improve your front-end skills by building projects</h1>
+    <!-- Heading and Paragraph -->
+    <h1 class="text-[#1f314f] text-[22px] font-bold leading-[120%] mt-7 px-10">Improve your front-end skills by building projects</h1>
     <p class="text-[#68778d] text-[15px] leading-[140%] tracking-[0.2px] mt-3 px-12">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
   </main>
 
