--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 <body class="font-[Outfit] text-center bg-[#d5e1ef]  flex flex-col justify-center items-center m-0 p-0 h-screen w-screen">
   <!-- Main Div -->
-  <main class="bg-white max-w-[355px] h-[540px] rounded-2xl shadow-md">
+  <main class="bg-white max-w-[355px] h-[540px] rounded-2xl shadow-lg">
     <!-- QR Code -->
     <img class="w-[320px] ml-[18px] mt-5 rounded-xl" src="images/image-qr-code.png" alt="image-qr-code">
     <!-- Heading and Paragraph -->
